sorted out backend service side router

--- a/src/js/views/projects/index.html
+++ b/src/js/views/projects/index.html
@@ -1,1 +1,7 @@
+<!DOCTYPE html>
 <h1>Project show page</h1>
+
+
+  <div ng-repeat="project in projectsIndex.all" class="col-sm-6 col-md-4 col-lg-3">
+      <p><strong>{{ project.title }}</strong></p>
+    </div>
