--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -1,1 +1,51 @@
-<h1>New project form</h1>
+<!DOCTYPE html>
+
+<h1>Add a New Project</h1>
+
+title: {type: String, required: true},
+description: {type: String, required: true},
+image: {type: String, required: true},
+projectUrl: {type: String, required: true},
+tech: [{type: String, required: true}],
+dateCreated: {type: Date}
+
+<div class="row">
+  <div class="col-md-4">
+    <h2>New Post</h2>
+    <form name="projectsNew.newForm" ng-submit="projectsNew.create()" novalidate>
+      <div>
+        <!-- <label for="image">Image</label>
+        <input base64 type="file" name="base64" id="image" ng-model="projectsNew.project.base64" required>
+        <div ng-messages="projectsNew.newForm.base64.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.base64.$touched) && projectsNew.newForm.base64.$invalid" class="error">
+          <div ng-message="required">Image is required.</div>
+        </div> -->
+      </div>
+      <div>
+        <label for="title">Project Title</label>
+        <input type="text" name="title" id="title" ng-model="projectsNew.project.title" required>
+        <div ng-messages="projectsNew.newForm.title.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.caption.$touched) && projectsNew.newForm.caption.$invalid" class="error">
+          <div ng-message="required">A project title is required.</div>
+        </div>
+      </div>
+
+      <div>
+        <label for="description">Project Description</label>
+        <textarea type="text" name="description" id="description" ng-model="projectsNew.project.description" required> </textarea>
+        <div ng-messages="projectsNew.newForm.description.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.caption.$touched) && projectsNew.newForm.caption.$invalid" class="error">
+          <div ng-message="required">A project description is required.</div>
+        </div>
+      </div>
+
+      <div>
+        <label for="projectUrl">Project Title</label>
+        <input type="text" name="projectUrl" id="projectUrl" ng-model="projectsNew.project.projectUrl" required>
+        <div ng-messages="projectsNew.newForm.projectUrl.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.caption.$touched) && projectsNew.newForm.caption.$invalid" class="error">
+          <div ng-message="required">A project Url is required.</div>
+        </div>
+      </div>
+
+
+      <button class="button">Create</button>
+    </form>
+  </div>
+</div>
