--- a/src/js/views/projects/edit.html
+++ b/src/js/views/projects/edit.html
@@ -1,1 +1,53 @@
 <h1>Project Edit form</h1>
+<div class="container">
+  <form ng-submit="projectsEdit.update(project)" name="projectsEdit.editForm" novalidate>
+
+    <div class="form-group row">
+      <label for="title" class="col-sm-2 col-form-label">Project Title</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="title" ng-model="projectsEdit.project.title" name="title" required>
+        <div ng-messages="projectsEdit.editForm.title.$error" ng-show="projectsEdit.editForm.$submitted ||projectsEdit.editForm.title.$touched">
+          <div class="notification" ng-message="required">Please add a title</div>
+        </div>
+      </div>
+
+    </div>
+    <div class="form-group row">
+      <label for="description" class="col-sm-2 col-form-label">Project Description</label>
+      <div class="col-sm-10">
+        <textarea class="form-control" id="description" ng-model="projectsEdit.project.description" required></textarea>
+        <div ng-messages="projectsEdit.editForm.description.$error" ng-show="projectsEdit.editForm.description.$submitted || projectsEdit.editForm.description.$touched">
+          <div class="notification" ng-message="required">Please add a description</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="image" class="col-sm-2 col-form-label">Image Url</label>
+      <div class="col-sm-10">
+        <input basae64 type="file" class="form-control" id="image" ng-model="projectsEdit.project.base64" name="base64" required>
+        <img ng-src="{{projectsEdit.project.base64}}" alt="">
+        <div ng-messages="projectsEdit.editForm.image.$error" ng-show="projectsEdit.editForm.$submitted ||projectsEdit.editForm.image.$touched">
+          <div class="notification" ng-message="required">Please add image url</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="projectUrl" class="col-sm-2 col-form-label">Project Url</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="projectUrl" ng-model="projectsEdit.project.projectUrl" name="projectUrl" required>
+        <div ng-messages="projectsEdit.editForm.projectUrl.$error" ng-show="projectsEdit.editForm.$submitted ||projectsEdit.editForm.projectUrl.$touched">
+          <div class="notification" ng-message="required">Please add a Project Url</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <div class="offset-sm-2 col-sm-10">
+        <input type="submit" value="Submit Changes">
+      </div>
+    </div>
+
+  </form>
+</div>
