--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
 
-<h1>Add a New Project</h1>
 
-title: {type: String, required: true},
-description: {type: String, required: true},
-image: {type: String, required: true},
-projectUrl: {type: String, required: true},
-tech: [{type: String, required: true}],
-dateCreated: {type: Date}
-
-<div class="row">
-  <div class="col-md-4">
-    <h2>New Post</h2>
-    <form name="projectsNew.newForm" ng-submit="projectsNew.create()" novalidate>
-      <div>
-        <!-- <label for="image">Image</label>
-        <input base64 type="file" name="base64" id="image" ng-model="projectsNew.project.base64" required>
-        <div ng-messages="projectsNew.newForm.base64.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.base64.$touched) && projectsNew.newForm.base64.$invalid" class="error">
-          <div ng-message="required">Image is required.</div>
-        </div> -->
-      </div>
-      <div>
-        <label for="title">Project Title</label>
-        <input type="text" name="title" id="title" ng-model="projectsNew.project.title" required>
-        <div ng-messages="projectsNew.newForm.title.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.caption.$touched) && projectsNew.newForm.caption.$invalid" class="error">
-          <div ng-message="required">A project title is required.</div>
+<h1>Add new Project</h1>
+<div class="container">
+  <form  name="projectsNew.newForm" ng-submit="projectsNew.create()"  novalidate>
+    <div class="form-group row">
+      <label for="title" class="col-sm-2 col-form-label">Project Title</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="title" ng-model="projectsNew.project.title" name="title" required>
+        <div ng-messages="projectsNew.newForm.title.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.title.$touched">
+          <div class="notification" ng-message="required">Please add a title</div>
         </div>
       </div>
-
-      <div>
-        <label for="description">Project Description</label>
-        <textarea type="text" name="description" id="description" ng-model="projectsNew.project.description" required> </textarea>
-        <div ng-messages="projectsNew.newForm.description.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.caption.$touched) && projectsNew.newForm.caption.$invalid" class="error">
-          <div ng-message="required">A project description is required.</div>
+    </div>
+    <div class="form-group row">
+      <label for="description" class="col-sm-2 col-form-label">Project Description</label>
+      <div class="col-sm-10">
+        <textarea class="form-control" id="description" ng-model="projectsNew.project.description" required></textarea>
+        <div ng-messages="projectsNew.newForm.description.$error" ng-show="projectsNew.newForm.description.$submitted || projectsNew.newForm.description.$touched">
+          <div class="notification" ng-message="required">Please add a description</div>
         </div>
       </div>
-
-      <div>
-        <label for="projectUrl">Project Title</label>
-        <input type="text" name="projectUrl" id="projectUrl" ng-model="projectsNew.project.projectUrl" required>
-        <div ng-messages="projectsNew.newForm.projectUrl.$error" role="alert" ng-show="(projectsNew.newForm.$submitted || projectsNew.newForm.caption.$touched) && projectsNew.newForm.caption.$invalid" class="error">
-          <div ng-message="required">A project Url is required.</div>
+    </div>
+    <div class="form-group row">
+      <label for="image" class="col-sm-2 col-form-label">Image Url</label>
+      <div class="col-sm-10">
+        <input base64 type="file" class="form-control" id="image" ng-model="projectsNew.project.base64" name="base64">
+        <img ng-src="{{projectsNew.project.base64}}" alt="">
+        <div ng-messages="projectsNew.newForm.image.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.image.$touched">
+          <div class="notification" ng-message="required">Please add image url</div>
         </div>
       </div>
-
-
-      <button class="button">Create</button>
-    </form>
-  </div>
+    </div>
+    <div class="form-group row">
+      <label for="projectUrl" class="col-sm-2 col-form-label">Project Url</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="projectUrl" ng-model="projectsNew.project.projectUrl" name="projectUrl" required>
+        <div ng-messages="projectsNew.newForm.projectUrl.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.projectUrl.$touched">
+          <div class="notification" ng-message="required">Please add a Project Url</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="offset-sm-2 col-sm-10">
+        <input type="submit" class="btn" value="Submit Changes">
+      </div>
+    </div>
+  </form>
 </div>
