image upload compelete, edit page and profile link still not working

--- a/src/js/views/projects/edit.html
+++ b/src/js/views/projects/edit.html
@@ -1,6 +1,6 @@
 <h1>Project Edit form</h1>
 <div class="container">
-  <form ng-submit="projectsEdit.update(project)" name="projectsEdit.editForm" novalidate>
+  <form ng-submit="projectsEdit.update()" name="projectsEdit.editForm" novalidate>
 
     <div class="form-group row">
       <label for="title" class="col-sm-2 col-form-label">Project Title</label>
