--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -42,6 +42,11 @@
       </div>
     </div>
     <div class="form-group row">
+      <div class="col-sm-10">
+        <p>For tech</p>
+      </div>
+    </div>
+    <div class="form-group row">
       <div class="offset-sm-2 col-sm-10">
         <input type="submit" class="btn" value="Submit Changes">
       </div>
