--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <h1>Individual project form</h1>
-
+<h3>{{ projectsShow.project.createdBy.firstName }}</h3>
 <h3>{{projectsShow.project.title}}</h3>
 <img ng-src="{{projectsShow.project.imageSRC}}" alt="">
 <p>Description: {{projectsShow.project.description}}</p>
