Partial GitHub Oauth added

--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -22,5 +22,8 @@
 
       <button class="button">Login</button>
     </form>
+
+    <button ng-click="login.authenticate('github')">Login with GitHub</button>
+
   </div>
 </div>
