--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -1,3 +1,9 @@
 <!DOCTYPE html>
 
 <h1>user profile show</h1>
+
+<h2>{{ user.user.username }}</h2>
+<a href="mailto:{{ user.user.email }}" ng-if="user.user.email">{{ user.user.email }}</a>
+<p>Github Id: <strong>{{ user.user.githubId }}</strong></p>
+
+<button ng-click="profile.logout()">Logout</button>
