--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -3,7 +3,8 @@
 
 <h1>Add new Project</h1>
 <div class="container">
-  <form  name="projectsNew.newForm" ng-submit="projectsNew.create()"  novalidate>
+  <form  name="projectsNew.newForm" ng-submit="projectsNew.create()" novalidate>
+    <div class="col-lg-6 left">
     <div class="form-group row">
       <label for="title" class="col-sm-2 col-form-label">Project Title</label>
       <div class="col-sm-10">
@@ -23,16 +24,6 @@
       </div>
     </div>
     <div class="form-group row">
-      <label for="image" class="col-sm-2 col-form-label">Image Url</label>
-      <div class="col-sm-10">
-        <input base64 type="file" class="form-control" id="image" ng-model="projectsNew.project.base64" name="base64">
-        <img ng-src="{{projectsNew.project.base64}}" alt="">
-        <div ng-messages="projectsNew.newForm.image.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.image.$touched">
-          <div class="notification" ng-message="required">Please add image url</div>
-        </div>
-      </div>
-    </div>
-    <div class="form-group row">
       <label for="projectUrl" class="col-sm-2 col-form-label">Project Url</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="projectUrl" ng-model="projectsNew.project.projectUrl" name="projectUrl" required>
@@ -46,10 +37,29 @@
         <p>For tech</p>
       </div>
     </div>
+
+  </div>
+    <div class="col-lg-6 right">
+
+
+    <div class="form-group row">
+      <label for="image" class="col-sm-2 col-form-label">Image Url</label>
+      <div class="col-sm-10">
+        <input base64 type="file" class="form-control" id="image" ng-model="projectsNew.project.base64" name="base64">
+        <img ng-src="{{projectsNew.project.base64}}" alt="">
+        <div ng-messages="projectsNew.newForm.image.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.image.$touched">
+          <div class="notification" ng-message="required">Please add image url</div>
+        </div>
+      </div>
+    </div>
+
+
     <div class="form-group row">
       <div class="offset-sm-2 col-sm-10">
         <input type="submit" class="btn" value="Submit Changes">
       </div>
     </div>
+  </div>
+
   </form>
 </div>
