Oauth issues sorted

--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -24,6 +24,7 @@
     </form>
 
     <button ng-click="login.authenticate('github')">Login with GitHub</button>
+    <button ng-click="login.authenticate('linkedin')">Login with LinkedIn</button>
 
   </div>
 </div>
