maps and eventbrite API working

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,10 @@
 // Import all of your scss files here
+
+
+
+.map {
+  height: 250px;
+  background-color: ghostwhite;
+  width: 75%;
+  float: right;
+}
