Animated nav working

--- a/src/js/views/projects/edit.html
+++ b/src/js/views/projects/edit.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <h1>Project Edit form</h1>
 <div class="container">
   <form ng-submit="projectsEdit.update()" name="projectsEdit.editForm" novalidate >
