--- a/src/js/views/projects/index.html
+++ b/src/js/views/projects/index.html
@@ -7,5 +7,7 @@
         <img ng-src="{{ project.imageSRC }}" alt="">
       <p><strong>Project title: {{ project.title }}</strong></p>
       <p>Description: {{ project.description }}</p>
+      <p>Tech: {{ project.tech }}</p>
+      <p>createdby: {{ project.createdBy.username }}</p>
 
     </div>
