--- a/src/js/views/projects/edit.html
+++ b/src/js/views/projects/edit.html
@@ -34,6 +34,7 @@
       </div>
     </div>
     </div>
+
     <div class="col-lg-6">
       <div class="form-group row">
         <label for="image" class="col-sm-2 col-form-label">Image Url</label>
@@ -43,6 +44,18 @@
           <div ng-messages="projectsEdit.editForm.image.$error" ng-show="projectsEdit.editForm.$submitted ||projectsEdit.editForm.image.$touched">
             <div class="notification" ng-message="required">Please add image url</div>
           </div>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="tech" class="col-sm-2 col-form-label">Tech</label>
+        <div class="col-sm-10">
+          <ui-select multiple tagging tagging-label="false" ng-model="projectsEdit.project.tech" theme="bootstrap" ng-disabled="main.disabled" style="width: 300px;" title="Choose a color">
+             <ui-select-match placeholder="Select techs...">{{ $item }}</ui-select-match>
+               <ui-select-choices repeat="tech in main.availableTechs | filter:$select.search">
+               {{tech}}
+             </ui-select-choices>
+           </ui-select>
+           <p>Selected: {{projectsEdit.tech}}</p>
         </div>
       </div>
 
