google maps working

--- a/src/js/views/statics/events.html
+++ b/src/js/views/statics/events.html
@@ -2,7 +2,7 @@
 <h1>Events</h1>
 <div class="yourLocation">
   <h3>Your current Location</h3>
-  <google-map></google-map>
+  <google-map events="events.all"></google-map>
 </div>
 
 
@@ -14,6 +14,5 @@
     <a href="{{events.url}}"></a>
     <p> start Time: {{event.startTime}} </p>
     <p> Address: {{event.address}} </p>
-
   </div>
 </div>
