--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 
 <h1>Individual project form</h1>
+<h1><i class="icon-apache"></i></h1>
 <h3>{{projectsShow.project.title}}</h3>
-<img ng-src="{{projectsShow.project.imageSRC}}" alt="">
+<img ng-src="{{ projectsShow.project.imageSRC }}" alt="">
 <p>Description: {{projectsShow.project.description}}</p>
-<ul>
-  <li ng-repeat="tech in projectsShow.project.tech" class="{{tech.toLowerCase()}}">
-    Tech: {{tech}}
-    <span><i class="icon-{{tech.toLowerCase()}}"></i></span>
 
+<ul>
+  <li ng-repeat="tech in projectsShow.project.tech" class="{{ tech.toLowerCase() }}">
+    Tech: {{tech}}
+    <span><i class="icon-{{ tech.toLowerCase() }}"></i></span>
   </li>
 </ul>
-<a ui-sref="usersShow({ id:projectsShow.project.createdBy.id })"><p>createdBy:{{projectsShow.project.createdBy.username}}</p></a>
+
+<a ui-sref="usersShow({ id:projectsShow.project.createdBy.id })"><p>createdBy:{{ projectsShow.project.createdBy.username }}</p></a>
 <!-- <a href="mailto:{{ usersShow.user.email }}" ng-if="usersShow.user.email">{{ usersShow.user.email }}</a> -->
 
 <button ng-if="main.isAuthenticated() && main.currentUserId === projectsShow.project.createdBy.id " ui-sref="projectsEdit({ id: projectsShow.project.id})">Edit</button>
 
 <button ng-if="main.isAuthenticated() && main.currentUserId === projectsShow.project.createdBy.id" ng-click="projectsShow.open()">Delete</button>
+
+
+<style type="text/css" scoped>
+.glyph-sample:hover { color:blue; }
+</style>
+<span class="glyph-sample"><i class="icon-html5"></i> icon-html5</span>
