--- a/src/js/views/users/edit.html
+++ b/src/js/views/users/edit.html
@@ -45,9 +45,9 @@
 
     <div class="col-lg-6">
       <div class="form-group row">
-        <label for="image" class="col-sm-2 col-form-label">Image Url</label>
+        <label for="avatar" class="col-sm-2 col-form-label">avatar</label>
         <div class="col-sm-10">
-          <input base64 type="file" class="form-control" id="image" ng-model="usersEdit.user.base64" name="base64">
+          <input base64 type="file" class="form-control" id="avatar" ng-model="usersEdit.user.base64" name="base64">
           <img ng-src="{{usersEdit.user.base64}}" alt="">
         </div>
       </div>
