--- a/src/js/views/projects/edit.html
+++ b/src/js/views/projects/edit.html
@@ -19,7 +19,7 @@
       <div class="form-group row">
         <label for="description" class="col-sm-2 col-form-label">Project Description</label>
         <div class="col-sm-10">
-          <textarea class="form-control" id="description" ng-model="projectsEdit.project.description" required></textarea>
+          <textarea class="form-control" id="description" ng-model="projectsEdit.project.description" maxlength="500" required></textarea>
           <div ng-messages="projectsEdit.editForm.description.$error" ng-show="projectsEdit.editForm.description.$submitted || projectsEdit.editForm.description.$touched">
             <div class="notification" ng-message="required">Please add a description</div>
           </div>
