--- a/src/js/views/projects/index.html
+++ b/src/js/views/projects/index.html
@@ -2,8 +2,12 @@
 
 <h1>Project index page</h1>
 
+<div class="">
+  <input type="text" class="search" ng-model="projectsIndex.q" placeholder="Search...">
+</div>
 
-  <div ng-repeat="project in projectsIndex.all" class="col-sm-6 col-md-4 col-lg-3">
+
+  <div ng-repeat="project in projectsIndex.filtered" class="col-sm-6 col-md-4 col-lg-3">
         <a ui-sref="projectsShow({ id: project.id })">show link</a>
         <img ng-src="{{ project.imageSRC }}" alt="">
       <p><strong>Project title: {{ project.title }}</strong></p>
