progressbar fully finished

--- a/src/js/views/projects/index.html
+++ b/src/js/views/projects/index.html
@@ -2,9 +2,13 @@
 
 <h1>Project index page</h1>
 
-<div class="">
+
+
+<div>
   <input type="text" class="search" ng-model="projectsIndex.q" placeholder="Search...">
 </div>
+
+
 
 
   <div ng-repeat="project in projectsIndex.filtered" class="col-sm-6 col-md-4 col-lg-3">
