--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -2,13 +2,17 @@
 
 <h1>user profile show</h1>
 
-    <uib-progressbar animate="true" value="usersShow.user.percentageComplete" type="success" max="100"><b>{{usersShow.user.percentageComplete}} %</b></uib-progressbar>
+    <uib-progressbar ng-if="main.isAuthenticated() && main.currentUserId === usersShow.user.id" animate="true" value="usersShow.user.percentageComplete" type="success" max="100"><b>{{usersShow.user.percentageComplete}} %</b></uib-progressbar>
 
-{{ usersShow.user.percentageComplete }}% complete
+
 <h2>Username:{{ usersShow.user.username }}</h2>
+<img src="{{usersShow.user.avatar}}" alt="">
 <h4>{{usersShow.user.email}}</h4>
-<!-- <a href="mailto:{{ usersShow.user.email }}" ng-if="usersShow.user.email">{{ usersShow.user.email }}</a> -->
+<!-- <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">Send Mail</a> -->
+<a href="mailto:{{ usersShow.user.email }}?Subject=Hello&Body=Hello" ng-if="usersShow.user.email">{{ usersShow.user.email }}</a>
 <p>Github Url: <strong>{{ usersShow.user.githubUrl }}</strong></p>
+
+
 
 <button ng-if="main.isAuthenticated() && main.currentUserId === usersShow.user.id" ui-sref="usersEdit({ id: usersShow.user.id})">Edit</button>
 
