--- a/src/js/views/statics/home.html
+++ b/src/js/views/statics/home.html
@@ -1,5 +1,79 @@
 <!DOCTYPE html>
 
-<div class="container">
-  <h1>Home Page</h1>
+<div class="container-fluid">
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-7">
+
+      <div class="devbookIntro">
+        <h2>DevBook</h2>
+        <p>A platform for developers to showcase personal and professional projects to </p>
+
+        <div ng-controller="LoginCtrl as login">
+
+          <div class="githubLogin">
+            <button class="btn btn_github btn-sm btn-block" ng-click="login.authenticate('github')"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i>Login with GitHub</button>
+          </div>
+          <div class="linkedinLogin">
+            <button class="btn btn_linkedin btn-sm btn-block" ng-click="login.authenticate('linkedin')"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>Login with LinkedIn</button>
+          </div>
+
+          <hr>
+
+          <div class="regForm">
+
+            <form class="form-horizontal" name="register.registerForm" ng-submit="register.submit()" novalidate>
+
+              <div class="form-group">
+                <input class="form-control" type="text" name="username" id="username" ng-model="register.user.username" required placeholder="Username">
+                <div ng-messages="register.registerForm.username.$error" role="alert" ng-show="(register.registerForm.$submitted || register.registerForm.username.$touched) && register.registerForm.username.$invalid" class="error">
+                  <div ng-message="required">Please enter a value for this field.</div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <input class="form-control" type="email" name="email" id="email" ng-model="register.user.email" required placeholder="Email Address">
+                <div ng-messages="register.registerForm.email.$error" role="alert" ng-show="(register.registerForm.$submitted || register.registerForm.email.$touched) && register.registerForm.email.$invalid" class="error">
+                  <div ng-message="required">Please enter a value for this field.</div>
+                  <div ng-message="email">This field must be a valid email address.</div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <input class="form-control" type="password" name="password" id="password" ng-model="register.user.password" required placeholder="Password">
+                <div ng-messages="register.registerForm.password.$error" role="alert" ng-show="(register.registerForm.$submitted || register.registerForm.password.$touched) && register.registerForm.password.$invalid" class="error">
+                  <div ng-message="required">Please enter a value for this field.</div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <input class="form-control" type="password" name="passwordConfirmation" id="passwordConfirmation" ng-model="register.user.passwordConfirmation" required placeholder="Password Confirmation">
+                <div ng-messages="register.registerForm.passwordConfirmation.$error" role="alert" ng-show="(register.registerForm.$submitted || register.registerForm.passwordConfirmation.$touched) && register.registerForm.passwordConfirmation.$invalid" class="error">
+                  <div ng-message="required">Please enter a value for this field.</div>
+                </div>
+              </div>
+
+              <button class="btn btn_home btn-sm btn-block">Register</button>
+
+            </form>
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+    </div>
+
+    <div class="col-md-4 col-md-offset-7">
+
+      <div class="loginBox" ng-controller="LoginCtrl as login">
+        <p>Already a member?</p>
+        <button class="btn btn_home btn-sm btn-block">Login</button>
+      </div>
+
+    </div>
+
+  </div>
 </div>
