--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,3 @@
-//
-// @import 'vendor/font-mfizz/font-mfizz.scss';
-//
 // // Import all of your scss files here
 //
 // // font-family: 'Raleway', sans-serif;
@@ -8,132 +5,84 @@
 //
 // @import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 //
-// @keyframes checked-anim {
-//     50% {
-//         width: 3000px;
-//         height: 3000px;
-//     }
-//     100% {
-//         width: 100%;
-//         height: 100%;
-//         border-radius: 0;
-//     }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transition: scale(1);
+  }
+}
+
+
+// Variables
+
+$default: #3D2C51;
+$primary: #1792AE;
+$success: #48A15D;
+$info:    #34E6D1;
+$warning: #FCBC00;
+$danger:  #FA5322;
+$orange:  #FF8900;
+$green:   #005B46;
+
+// Extends
+
+.centered-styles {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.form-styles {
+  width: 100%;
+  font-size: 14px;
+  padding: 8px 10px;
+  border: 0;
+  border-radius: 4px;
+  background-color: white;
+  &:focus {
+    outline: none !important;
+  }
+}
+
+body {
+  background-image: url('http://cdn.wallpapersafari.com/49/2/eEQzwl.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  font-family: 'Raleway', sans-serif;
+}
+
+.container {
+  margin: auto;
+}
+
+// main {
+//   margin: 0;
 // }
-//
-// @keyframes not-checked-anim {
-//     0% {
-//         width: 3000px;
-//         height: 3000px;
-//     }
-// }
-//
-// html, body {
-//     margin: 0;
-//     padding: 0;
-//
-//     background-image: url('http://cdn.wallpapersafari.com/49/2/eEQzwl.jpg');
-//     overflow: hidden;
-//     color: #1985A1;
-//     font-family: 'Raleway', sans-serif;
-//
-// }
-//
-// li, a {
-//     margin: 75px 0 -55px 0;
-//     color: #C5C3C6;
-//     font-weight: 700;
-//     line-height: 1.8;
-//     text-decoration: none;
-//     text-transform: none;
-//     list-style: none;
-//     outline: 0;
-//     display: none;
-// }
-//
-// li {
-//     width: 230px;
-//     text-indent: 56px;}
-// a:focus {
-//     display: block;
-//     color: #333;
-//     background-color: #8ACB88;
-//     transition: all .5s;
-// }
-//
-// .openedNav {
-//   z-index: 1;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//
-// }
-//
-// #trigger, #burger, #burger:before, #burger:after {
-//     position: absolute;
-//     top: 25px;
-//     left: 25px;
-//     background: #1985A1;
-//     width: 30px;
-//     height: 5px;
-//     transition: .2s ease;
-//     cursor: pointer;
-//     z-index: 1;
-// }
-// #trigger {
-//     height: 25px;
-//     background: none;
-// }
-// #burger:before {
-//     content: " ";
-//     top: 10px;
-//     left: 0;
-// }
-// #burger:after {
-//     content: " ";
-//     top: 20px;
-//     left: 0;
-// }
-// #menu-toggle.open + #trigger + #burger {
-//     top: 35px;
-//     transform: rotate(180deg);
-//     transition: transform .2s ease;
-// }
-//
-// #menu-toggle.open + #trigger + #burger:before {
-//     width: 20px;
-//     top: -2px;
-//     left: 18px;
-//     transform: rotate(45deg) translateX(-5px);
-//     transition: transform .2s ease;
-// }
-// #menu-toggle.open + #trigger + #burger:after {
-//     width: 20px;
-//     top: 2px;
-//     left: 18px;
-//     transform: rotate(-45deg) translateX(-5px);
-//     transition: transform .2s ease;
-// }
-// #menu {
-//     position: absolute;
-//     margin: 0; padding: 0;
-//     width: 100px;
-//     height: 100px;
-//     background-color: #FE5F55;
-//     border-bottom-right-radius: 100%;
-//     box-shadow: 0 2px 5px rgba(0,0,0,0.26);
-//     animation: not-checked-anim .2s both;
-//     transition: .2s;
-// }
-// #menu-toggle.open + #trigger + #burger + #menu {
-//     animation: checked-anim 1s ease both;
-// }
-// #menu-toggle.open + #trigger ~ #menu > li, a {
-//     display: block;
-// }
-//
-// .main-controller {
-//   margin-top: 100px;
-// }
+
+img {
+  max-width: 100%;
+}
+
+nav {
+  &.navbar {
+    background-color: $primary;
+    a {
+      &.nav-link {
+        color: white;
+        font-size: 16px;
+      }
+    }
+  }
+}
 
 .map {
   height: 300px;
@@ -144,7 +93,115 @@
 
 i {
   font-size: 60px;
-  a:hover {
-    background-color: yellow;
+}
+
+.devbookIntro {
+  text-align: center;
+}
+
+hr {
+  border-color: black;
+  border-width: 2px;
+}
+
+button {
+  &.btn {
+    border-radius: 10px;
+  }
+}
+
+.btn_github {
+  background-color: #24292E;
+  color: white;
+  &:hover {
+    color: $warning;
+  }
+}
+
+.btn_linkedin {
+  background-color: #0077B5;
+  color: white;
+  &:hover {
+    color: $warning;
+  }
+}
+
+.btn_home {
+  background-color: $success;
+  color: white;
+}
+
+.devbookIntro, .loginBox {
+  margin: 25px;
+  border: 1px solid black;
+  padding: 30px;
+}
+
+ul {
+  // width: 100%;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+
+  li {
+    position: relative;
+    cursor: pointer;
+    div{
+      &.bg-img {
+          top:0;
+          min-width: 100vw;
+          height: 300px;
+          border-radius: 10px;
+          background-position: center;
+          background-size: cover;
+          // filter: brightness(.5);
+          transition: all 0.3s;
+          position: relative;
+          .project-overlay {
+            opacity: 0;
+            transition: all 0.3s ease;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.9);
+            .project-info {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              a {
+                text-decoration: none;
+              }
+              h1 {
+                color: $orange;
+                animation: pulse 2s infinite;
+              }
+            }
+          }
+          &:hover {
+            z-index: 2;
+            // filter: none;
+            // filter: brightness(.5);
+            transform: scale(1.05);
+            .project-overlay {
+              opacity: 1;
+            }
+          }
+
+          // img {
+          //   border-radius: 10px;
+          //   background-position: center;
+          //   background-size: cover;
+          //   filter: brightness(.5);
+          //   transition: all 0.3s;
+          //   &:hover {
+          //     filter: none;
+          //     transform: scale(1.05);
+          //   }
+          // }
+      }
+    }
   }
 }
